--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -47,7 +47,10 @@
 <!--SCRIPTS FRAGMENT-->
 <scripts th:fragment="scripts">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="/js/logic.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjbtktHE1HMBdOfoSjwZSnQEAfWClqL0M&callback=initMap"></script>
+  <script src="http://api.glassdoor.com/api/api.htm?t.p=167558&t.k=kRjES33TNWE
+&userip=0.0.0.0&useragent=&format=json&v=1&action=jobs-stats&returnStates=true&admLevelRequested=1"></script>
+  <script src="/js/ajax.js"></script>
 </scripts>
 
 </body>
