--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,11 +20,11 @@
 <!--NAV BAR FRAGMENT-->
 <nav th:fragment="navbar" class="navbar navbar-default" id="nav-bar">
   <img src="/img/logoplaceholder.svg" alt="logo" width="32" height="32"/>
-  <a href="/placeholder"><h2>LifeMap</h2></a>
+  <a href="/"><h2>LifeMap</h2></a>
   <ul>
-    <li><a href="/placeholder">Home</a></li>
+    <li><a href="/">Home</a></li>
     <li sec:authorize="isAuthenticated()">
-      <a href="/placeholder">Profile</a>
+      <a href="/profile">Profile</a>
     </li>
     <li sec:authorize="isAuthenticated()">
       <form th:action="@{'/logout'}" th:method="post">
@@ -32,14 +32,14 @@
       </form>
     </li>
     <li sec:authorize="!isAuthenticated()"><a href="/login">Log In</a></li>
-    <li sec:authorize="!isAuthenticated()"><a href="/users/create">Join Us!</a></li>
+    <li sec:authorize="!isAuthenticated()"><a href="/register">Join Us!</a></li>
   </ul>
 </nav>
 
 <footer th:fragment="footer">
   <ul>
     <li>
-      <a href="/simplesauce">The SimpleSauce Team</a>
+      <a href="/about">The SimpleSauce Team</a>
     </li>
   </ul>
 </footer>
