--- a/src/main/resources/templates/nav/about.html
+++ b/src/main/resources/templates/nav/about.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head>
-    <meta charset="UTF-8">
-    <title>About</title>
-</head>
+<head th:replace="fragments :: head(About)" />
 <body>
 <nav th:replace="fragments :: navbar" />
 
