--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments :: head(title)" />
+<head th:replace="fragments :: head(Title)" />
 <body>
 <nav th:replace="fragments :: navbar" />
 
-<h1>This is a test</h1>
+<h1 style="text-align: center">This is a test</h1>
+<br />
 
 <footer th:replace="fragments :: footer" />
 
