--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -47,10 +47,10 @@
 <!--SCRIPTS FRAGMENT-->
 <scripts th:fragment="scripts">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script th:src="${'https://maps.googleapis.com/maps/api/js?key=' + @environment.getProperty('google.maps.key') + '&amp;callback=initMap'}"></script>
+  <script th:src="${'https://maps.googleapis.com/maps/api/js?key=' + @environment.getProperty('google.maps.key')}"></script>
+  <script src="/js/ajax.js"></script>
   <!--<script src="http://api.glassdoor.com/api/api.htm?t.p=167558&t.k;=kRjES33TNWE-->
 <!--&userip=0.0.0.0&useragent=&format=json&v=1&action=jobs-stats&returnStates=true&admLevelRequested=1"></script>-->
-  <script src="/js/ajax.js"></script>
 </scripts>
 
 </body>
