Added the following:
1.  UserController
2.  Register link works properly and adds record to users table
3.  Login view displays properly.  working on loggin in issue.
4.  Added roles and security configuration
5.  Added submit button to login view

--- a/src/main/resources/templates/nav/results.html
+++ b/src/main/resources/templates/nav/results.html
@@ -4,6 +4,13 @@
 <body>
 <nav th:replace="fragments :: navbar" />
 
+
+<form th:action="@{/login}" th:method="post">
+  <h1>this is the results page</h1>
+</form>
+
+
+
 <footer th:replace="fragments :: footer" />
 
 <script th:replace="fragments :: scripts" />
