--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -4,6 +4,33 @@
 <body>
 <nav th:replace="fragments :: navbar" />
 
+
+<form id="formFlds" th:action="@{/user/register}" th:method="POST" th:object="${user}">
+
+    <div class="form-group group-to-right">
+        <label id="usernameLbl" for="username">Username</label>
+        <!--<input id="username" class="form-control" th:field="*{username}" />-->
+        <input id="username" class="form-control" th:field="*{username}" />
+    </div>
+
+    <div class="form-group group-to-right">
+        <label id="emailLbl" for="email">Email</label>
+        <!--<input id="email" class="form-control" th:field="*{email}" />-->
+        <input id="email" class="form-control" th:field="*{email}" />
+    </div>
+
+    <div class="form-group group-to-right">
+        <label id="passwordLbl" for="password">Password</label>
+        <!--<input id="password" type="password" class="form-control" th:field="*{password}" />-->
+        <input id="password" type="password" class="form-control" th:field="*{password}" />
+    </div>
+
+    <br/>
+    <input class="btn btn-lg btn-primary" id="btnSubmit" type="submit" />
+</form>
+
+
+
 <footer th:replace="fragments :: footer" />
 
 <script th:replace="fragments :: scripts" />
