Added testing for responsive css and html

--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -4,8 +4,11 @@
 <body>
 <nav th:replace="fragments :: navbar" />
 
-<h1 style="text-align: center">This is a test</h1>
-<br />
+<div class="col-4-T col-2-D test">
+    <ul>
+        <li>This is a test</li>
+    </ul>
+</div>
 
 <footer th:replace="fragments :: footer" />
 
