updated ajax.js -Added method for retrieving end-user IP and transferring it to GlassDoor API -Added method for GlassDoor API data retrieval -Added methods for Google Maps API to function properly on view.

--- a/src/main/resources/static/JS/globalGym.css
+++ b/src/main/resources/static/JS/globalGym.css
@@ -11,6 +11,13 @@ body {
     color: #FFFFFF;
 }
 
+#map {
+  background-color: azure;
+  border-radius: 50%;
+  height: 400px;
+  width: 400px;
+}
+
 a:visited {
     color: #00B4FF;
 }
