--- a/src/main/resources/static/JS/globalGym.css
+++ b/src/main/resources/static/JS/globalGym.css
@@ -1,9 +1,6 @@
-.test{
-    border: 1px solid #FFFFFF;
-}
 
-.test li {
-    text-align: center;
+html {
+    box-sizing: border-box;
 }
 
 body {
@@ -11,23 +8,88 @@ body {
     color: #FFFFFF;
 }
 
+.navbar {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background: transparent;
+    padding: 10px;
+}
+
+/* Custom Nav Bar */
+*,*:before, *:after {
+    box-sizing: inherit;
+}
+
+.bar {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background: black;
+    opacity: 0.5;
+    padding: 10px;
+}
+
+.search {
+    flex: 1;
+}
+.search input {
+    width: 30%;
+}
+
+@media (max-width: 650px) {
+    .bar {
+        flex-wrap: wrap;
+    }
+    .icon {
+        order: 0 !important;
+    }
+    .name {
+        order: 1 !important;
+        width: 100%;
+        margin: 15px;
+    }
+    .search {
+        order: 2 !important;
+        width: 100%;
+    }
+}
+
+/* End */
+
+@media (max-width: 650px) {
+    .navbar {
+        flex-wrap: wrap;
+    }
+}
+
+/*.nav-links {*/
+    /*float: right;*/
+    /*display: block;*/
+    /*text-align: center;*/
+    /*padding: 7px 8px;*/
+/*}*/
+
+.test{
+    display: flex;
+    border: 1px solid #FFFFFF;
+    margin-top: 30px;
+}
+
+.text-test {
+    display: inline-flex;
+    text-align: center;
+    margin-top: 30px;
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
 a:visited {
     color: #00B4FF;
-}
-
-[class*="col-"] {
-    width: 95%;
-}
-@media only screen and (min-width: 504px) {
-    .col-1-T {width: 25%;}
-    .col-2-T {width: 50%;}
-    .col-3-T {width: 75%;}
-    .col-4-T {width: 95%;}
-}
-
-@media only screen and (min-width: 1024px) {
-    .col-1-D {width: 25%;}
-    .col-2-D {width: 50%;}
-    .col-3-D {width: 75%;}
-    .col-4-D {width: 95%;}
 }
