Added the following:
1.  Finalized the login security configuration
2.  Added annotations(security configuration) to the register view
    -  username and password can not be blank
    -  email can not be blank and must be in correct format

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -6,13 +6,25 @@
 
 <h1>Log In</h1>
 
-<form th:action="@{/results}" th:method="post">
+<form th:action="@{/login}" th:method="post">
     <label for="username">Username</label>
     <input id="username" name="username" type="text" />
     <label for="password">Password</label>
     <input id="password" name="password" type="password" />
     <br/>
     <input id="moveBtn" type="submit" value="Log In" />
+
+
+
+    <div id="LoginErrorDiv">
+        <div class="error" th:if="${param.error}">
+            Invalid Username and Password.
+        </div>
+        <!--<div class="error" th:if="${param.logout}">-->
+            <!--You have been logged out.-->
+        <!--</div>-->
+    </div>
+
 </form>
 
 
