--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -27,12 +27,7 @@
         <div id="map"></div>
     </div>
 
-    <div class="test">
-        <ul>
-            <li class="text-test">This is a test</li>
-        </ul>
-    </div>
-
+    <!--Dummy text-->
     <div class="text-test">
         <p>The World's Longest (and Best) Paragraph
         In May 1951, Jack Kerouac wrote his friend Neal Cassady to tell him about the road-trip novel he'd just finished. In the letter, Kerouac talked of how he had typed the entire manuscript between April 2 and April 22, on a single 120-foot roll of teletype paper, single-spaced, "just rolled it through typewriter and in fact no paragraphs . . . rolled it out on floor and it looks like a road."
