--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -6,26 +6,37 @@
 
 <h1>Log In</h1>
 
-<form th:action="@{/login}" th:method="post">
-    <label for="username">Username</label>
-    <input id="username" name="username" type="text" />
-    <label for="password">Password</label>
-    <input id="password" name="password" type="password" />
-    <br/>
-    <input id="moveBtn" type="submit" value="Log In" />
+<div id="moveFldsDiv" class="col-sm-6 col-sm-offset-3 text-center">
+    <form th:action="@{/login}" th:method="post" class="form-horizontal">
 
-
-
-    <div id="LoginErrorDiv">
-        <div class="error" th:if="${param.error}">
-            Invalid Username and Password.
+        <div class="form-group">
+            <label id="usernameLbl" for="username" class="col-sm-2 control-label">Username</label>
+            <div class="col-sm-10">
+                 <input id="username" name="username" type="text" />
+            </div>
         </div>
-        <!--<div class="error" th:if="${param.logout}">-->
-            <!--You have been logged out.-->
-        <!--</div>-->
-    </div>
 
-</form>
+        <div class="form-group">
+            <label id="passwordLbl" for="password" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-10">
+                 <input id="password" name="password" type="password" />
+            </div>
+        </div>
+
+        <br/>
+
+        <input id="moveBtn" type="submit" value="Log In" />
+
+
+
+        <div id="LoginErrorDiv">
+            <div class="error" th:if="${param.error}">
+                Invalid Username and Password.
+            </div>
+        </div>
+
+    </form>
+</div>
 
 
 
