--- a/src/main/resources/static/globalGym.css
+++ b/src/main/resources/static/globalGym.css
@@ -99,11 +99,12 @@ img {
     width: 70%;
 }
 
+
 #map {
     background-color: azure;
     border-radius: 50%;
-    height: 100%;
-    width: 100%;
+    height: 400px;
+    width: 400px;
 }
 /* End of Map */
 
