--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,6 +9,7 @@
 
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
   <link rel="stylesheet" href="js/globalGym.css"/>
+  <link rel="stylesheet" href="JS/login.css" />
 
   <link rel="shortcut icon" href="/img/logoplaceholder.ico" type="image/ico"/>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
