--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments :: head(Login)" />
+<head th:replace="fragments :: head(Login)"/>
 <body>
-<nav th:replace="fragments :: navbar" />
+<nav th:replace="fragments :: navbar"/>
 
-<h1>Log In</h1>
 
-<div id="moveFldsDiv" class="col-sm-6 col-sm-offset-3 text-center">
+<div id="moveFldsDiv" class="col-sm-6 col-sm-offset-3 text-center content-wrap">
+    <h1>Log In</h1>
     <form th:action="@{/login}" th:method="post" class="form-horizontal">
 
         <div class="form-group">
             <label id="usernameLbl" for="username" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-10">
-                 <input id="username" name="username" type="text" />
+                <input id="username" class="col-sm-10" name="username" type="text"/>
             </div>
         </div>
 
         <div class="form-group">
             <label id="passwordLbl" for="password" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
-                 <input id="password" name="password" type="password" />
+                <input id="password" class="col-sm-10" name="password" type="password"/>
             </div>
         </div>
 
         <br/>
 
-        <input id="moveBtn" type="submit" value="Log In" />
-
+        <input id="moveBtn" type="submit" value="Log In"/>
 
 
         <div id="LoginErrorDiv">
@@ -39,9 +38,8 @@
 </div>
 
 
+<footer th:replace="fragments :: footer"/>
 
-<footer th:replace="fragments :: footer" />
-
-<script th:replace="fragments :: scripts" />
+<script th:replace="fragments :: scripts"/>
 </body>
 </html>
