--- a/src/main/resources/static/JS/login.css
+++ b/src/main/resources/static/JS/login.css
@@ -1,5 +1,11 @@
 body, html{
-    background-color: #3a4043;
+    background-image: url("/img/road-map-login.jpg");
+    background-size: cover;
+}
+
+#loginHeader{
+    font-family: 'Monoton', cursive;
+    font-size: 3em;
 }
 
 #username{
@@ -33,20 +39,32 @@ body, html{
 /*}*/
 
 
-#btnSubmit{
-    margin-left: 240px;
-    margin-top: 120px;
-    border-radius: 1px;
+.semi-transparent-button {
+    display: block;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 8px;
+    width: 80%;
+    max-width: 200px;
+    background: #fff; /* fallback color for old browsers */background: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    letter-spacing: 1px;
+    transition: all 0.3s ease-out;
+    position: relative;
+    top: 145px;
 }
 
 #moveFldsDiv{
     /*border: 1px solid white;*/
 }
 
-#moveBtn{
-    margin-left: 425px;
-    margin-top: 100px;
-}
+/*#moveBtn{*/
+    /*margin-left: 425px;*/
+    /*margin-top: 100px;*/
+/*}*/
 
 #titleLbl{
     margin-left: 450px;
