--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -12,8 +12,8 @@
     <div class="search">
         <h1 id="location-name">City Name Goes Here</h1>
         <input id="city-input" placeholder="Company Address" type="text"/>
-        <div>
-        <!--TODO This will be a selector for amount of ppl moving-->
+        <div id="persons-selector">
+          <img id="persons-image" src="/img/009-user-black-close-up-shape.svg" alt="one"/>
         </div>
         <form id="get-info" action="/">
           <button>GO</button>
