--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -4,67 +4,29 @@
 <body>
 <!--Custom navbar for main page-->
 <div class="bar">
+
   <a class="navbar-item" id="logo" href="/">
     <img src="http://via.placeholder.com/32x32"/>
   </a>
   <input class="navbar-item" id="city-input" placeholder="Company Address" type="text"/>
   <div class="navbar-item" id="persons-selector">
+    <span class="tooltip">How many ppl are moving?</span>
     <img class="navbar-item" id="persons-image" src="./img/009-user-black-close-up-shape.svg" alt="one" />
   </div>
-  <form class="navbar-item" id="get-info" action="/">
-    <button>GO</button>
-  </form>
+  <button class="navbar-item" id="get-info">GO</button>
 </div>
 
 <div id="content-wrap">
   <!--Temp location for Search Info-->
-  <div class="map-wrap">
+  <div class="city-info-wrap">
       <div id="image-container"></div>
     <h1 id="location-name">Type An Address!</h1>
       <div id="location-info"></div>
   </div>
 
-<div id="info-card-container">
-  <div class="info-card">
-    <div id="map"></div>
-  </div>
+  <div id="map"></div>
 
-  <div class="info-card" id="coffee-cost">
-
-  </div>
-
-  <div class="info-card" id="fitness-cost">
-
-  </div>
-
-  <div class="info-card" id="meal-cost">
-
-  </div>
-
-  <div class="info-card" id="happiness">
-
-  </div>
-
-  <div class="info-card" id="today-temp">
-
-  </div>
-
-  <div class="info-card" id="apartment-cost">
-
-  </div>
-
-  <div class="info-card">
-
-  </div>
-
-  <div class="info-card">
-
-  </div>
-
-  <div class="info-card">
-
-  </div>
-</div>
+  <div id="info-card-container"></div>
 
     <footer th:replace="fragments :: footer" />
 </div>
