--- a/src/main/resources/static/JS/login.css
+++ b/src/main/resources/static/JS/login.css
@@ -1,6 +1,8 @@
 body, html{
     background-image: url("/img/road-map-login.jpg");
     background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 #loginHeader{
@@ -48,23 +50,18 @@ body, html{
     max-width: 200px;
     background: #fff; /* fallback color for old browsers */background: rgba(255, 255, 255, 0.1);
     border-radius: 5px;
-    color: #fff;
+    color: #515151;
     text-align: center;
     text-decoration: none;
     letter-spacing: 1px;
     transition: all 0.3s ease-out;
     position: relative;
     top: 145px;
+    border: dimgray;
+    border-style: solid;
+    border-width: 1px;
 }
 
-#moveFldsDiv{
-    /*border: 1px solid white;*/
-}
-
-/*#moveBtn{*/
-    /*margin-left: 425px;*/
-    /*margin-top: 100px;*/
-/*}*/
 
 #titleLbl{
     margin-left: 450px;
@@ -79,6 +76,15 @@ body, html{
 #errorDiv{
     margin-top: 160px;
     margin-left: -90px;
+}
+
+.navbar-brand{
+    padding: 0 15px;
+}
+.site-name{
+    color: white;
+    font-size: 1.5em;
+    margin-top: 10px;
 }
 
 
