--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,59 +3,73 @@
 
 <!--HEAD FRAGMENT-->
 <head th:fragment="head(title)">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1" />
-  <title th:text="${title}"></title>
-  <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1"/>
+    <title th:text="${title}"></title>
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet"/>
 
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-  <link rel="stylesheet" href="js/globalGym.css"/>
-  <link rel="stylesheet" href="JS/login.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="js/globalGym.css"/>
+    <link rel="stylesheet" href="JS/login.css"/>
 
-  <link rel="shortcut icon" href="/img/logoplaceholder.ico" type="image/ico"/>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-          crossorigin="anonymous">
-  </script>
+    <link rel="shortcut icon" href="/img/logoplaceholder.ico" type="image/ico"/>
 </head>
 
 <body>
 
 <!--NAV BAR FRAGMENT-->
-<nav th:fragment="navbar" class="navbar navbar-default" id="nav-bar">
-  <img src="/img/logoplaceholder.svg" alt="logo" width="32" height="32"/>
-  <a href="/"><h2>LifeMap</h2></a>
-  <ul>
-    <div class="nav-links">
-      <li><a href="/">Home</a></li>
-      <li sec:authorize="isAuthenticated()">
-        <a href="/profile">Profile</a>
-      </li>
-      <li sec:authorize="isAuthenticated()">
-        <form th:action="@{'/logout'}" th:method="post">
-          <button>Log Out</button>
-        </form>
-      </li>
-      <li sec:authorize="!isAuthenticated()"><a href="/login">Log In</a></li>
-      <li sec:authorize="!isAuthenticated()"><a href="/register">Join Us!</a></li>
+<nav th:fragment="navbar" class="navbar navbar-inverse" id="nav-bar">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">-->
+            <!--<span class="sr-only">Toggle navigation</span>-->
+            <!--<span class="icon-bar"></span>-->
+            <!--<span class="icon-bar"></span>-->
+            <!--<span class="icon-bar"></span>-->
+            <!--</button>-->
+            <a class="navbar-brand" href="/">
+                <img id="compassImg" src="/img/compass1.png" alt="logo" width="50" height="50"/>
+                <!--LifeMap-->
+            </a>
+            <div class="navbar-left site-name">LifeMap</div>
+        </div>
+        <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <li sec:authorize="isAuthenticated()">
+                    <a href="/profile">Profile</a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <form th:action="@{'/logout'}" th:method="post">
+                        <button class="btn btn-link">Log Out</button>
+                    </form>
+                </li>
+                <li sec:authorize="!isAuthenticated()"><a href="/login">Log In</a></li>
+                <li sec:authorize="!isAuthenticated()"><a href="/register">Join Us!</a></li>
+            </ul>
+        </div>
     </div>
-  </ul>
 </nav>
 
 <footer th:fragment="footer">
-  <a href="/about">The SimpleSauce Team</a>
+    <a href="/about">The SimpleSauce Team</a>
 </footer>
 
 <!--SCRIPTS FRAGMENT-->
 <scripts th:fragment="scripts">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script th:src="${'https://maps.googleapis.com/maps/api/js?key=' + @environment.getProperty('google.maps.key') + '&amp;libraries=places'}"></script>
-  <script th:inline="javascript">
-    /*<![CDATA[*/
-    const MAPS_KEY = "@environment.getProperty('google.maps.key')";
-    /*]]>*/
-  </script>
-  <script src="/js/ajax.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script th:src="${'https://maps.googleapis.com/maps/api/js?key=' + @environment.getProperty('google.maps.key') + '&amp;libraries=places'}"></script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        const MAPS_KEY = "@environment.getProperty('google.maps.key')";
+        /*]]>*/
+    </script>
+    <script src="/js/ajax.js"></script>
 </scripts>
 
 </body>
