--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -2,6 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:replace="fragments :: head(Login)"/>
 <body>
+<link rel="stylesheet" href="JS/login.css"/>
+
 <nav th:replace="fragments :: navbar"/>
 
 
