Updated ajax.js -ipGetter now receives zipcode no matter what type of result is passed.
Added images to img directory.

Updated css:
-sections
-navbar image

--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -9,16 +9,12 @@
     <img src="http://via.placeholder.com/32x32"/>
   </a>
   <input class="navbar-item" id="city-input" placeholder="Company Address" type="text"/>
-  <div class="navbar-item" id="persons-selector">
-    <span class="tooltip">How many ppl are moving?</span>
-    <img class="navbar-item" id="persons-image" src="./img/009-user-black-close-up-shape.svg" alt="one" />
-  </div>
   <button class="navbar-item" id="get-info">GO</button>
 </div>
 
 <div id="content-wrap">
   <!--Temp location for Search Info-->
-  <div class="city-info-wrap">
+  <div id="city-info-wrap">
       <div id="image-container"></div>
     <h1 id="location-name">Type An Address!</h1>
       <div id="location-info"></div>
