--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -7,5 +7,18 @@
 <footer th:replace="fragments :: footer" />
 
 <script th:replace="fragments :: scripts" />
+
+
+<nav th:replace="fragments :: my-navbar"/>
+<div class="container">
+    <form
+            th:action="${'/posts/' + post.id + '/edit'}"
+            method="post"
+            th:object="${post}"
+            th:include="fragments :: form"
+    >
+    </form>
+</div>
+
 </body>
 </html>
