--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,7 +8,8 @@
   <title th:text="${title}"></title>
   <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet" />
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/globalGym.css"/>
+  <link rel="stylesheet" href="/css/globalGym.css" />
+  <link rel="stylesheet" href="/css/profilePage.css" />
   <link rel="stylesheet" href="/css/login.css" />
   <!--<link rel="shortcut icon" href="./img/logoplaceholder.ico" type="image/ico"/>-->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -21,7 +22,7 @@
 
 <!--NAV BAR FRAGMENT-->
 <nav th:fragment="navbar" class="navbar navbar-default" id="nav-bar">
-  <img src="/img/logoplaceholder.svg" alt="logo" width="32" height="32"/>
+  <img src="/img/push-pin-on-map.svg" alt="logo" id="logo" />
   <a href="/"><h2>LifeMap</h2></a>
   <ul>
     <div class="nav-links">
@@ -41,7 +42,7 @@
 </nav>
 
 <footer th:fragment="footer">
-  <a href="/about">The SimpleSauce Team</a>
+  <a class="cntr-text" href="/about">The SimpleSauce Team</a>
 </footer>
 
 <!--SCRIPTS FRAGMENT-->
