--- a/src/main/resources/templates/nav/jobs.html
+++ b/src/main/resources/templates/nav/jobs.html
@@ -6,21 +6,21 @@
 <div class="bar">
 
     <a class="navbar-item" id="logo" href="/jobs">
-        <img src="http://via.placeholder.com/32x32"/>
+        <img src="/img/push-pin-on-map.svg" alt="logo" id="logo" />
     </a>
     <input class="navbar-item" id="city-input" placeholder="Company Address" type="text"/>
     <div class="navbar-item" id="persons-selector">
         <span class="tooltip">How many ppl are moving?</span>
         <img class="navbar-item" id="persons-image" src="./img/009-user-black-close-up-shape.svg" alt="one" />
     </div>
-    <button class="navbar-item" id="get-info">GO</button>
+    <button class="navbar-item go" id="get-info">GO</button>
 </div>
 
 <div id="content-wrap">
     <!--Temp location for Search Info-->
     <div class="city-info-wrap">
-        <div id="image-container"></div>
-        <h1 id="location-name">Type An Address!</h1>
+        <div></div>
+            <h1 class="cntr-text" id="location-name">Type An Address!</h1>
         <div id="location-info"></div>
     </div>
 
