--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -5,55 +5,49 @@ html, body {
 }
 
 body {
-  background: #515151;
+  margin: 0;
+  font-family: Edelsans, Avenir, sans-serif;
+  background-color: #2c2c2c;
   color: #FFFFFF;
 }
 /*===================NAV BAR===================*/
 .bar {
-  height: 75px;
+  z-index: 1;
   position: fixed;
   display: flex;
-  align-items: center;
-  width: 100%;
-  background-color: rgba(0,0,0,0.5);
+  align-content: center;
+  justify-content: center;
+  width: 100vw;
+  background: url('../img/compassandmap.png');
+  background-position: center;
+  background-size: cover;
   top: 0;
   padding: 5px;
+}
+
+.navbar-item {
+  margin: 4px;
 }
 
 .search {
   flex: 1;
 }
-.search input {
-  width: 70%;
-}
 
 #logo {
+  position: fixed;
+  left: 10px;
   display: inline;
 }
 
 #city-input {
   color: #515151;
+  width: 50vw;
+  border-radius: 8px;
 }
 
-#persons-image {
-  width: 32px;
-  height: 32px;
-}
-
-.tooltip {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
-}
-
-#persons-img:hover .tooltip {
-  visibility: visible;
+#get-info {
+  background: none;
+  border: none;
 }
 
 a:visited {
@@ -72,7 +66,7 @@ a:visited {
 
 /*Wraps location-image, location-name and location-info*/
 #city-info-wrap {
-
+  background-color: #abdde9;
 }
 
 #location-image {
@@ -93,10 +87,38 @@ a:visited {
 /*Self-explanatory, sits in its own section*/
 #map {
   margin: 5px auto;
-  z-index: 1;
+  z-index: 0;
   background-color: azure;
   height: 300px;
   width: 90%;
+}
+
+.colored-tile {
+  height: 50vh;
+  width: 100vw;
+}
+
+.colored-tile:nth-of-type(even) {
+  background-color: #1BB0CE;
+}
+
+.colored-tile:nth-of-type(odd) {
+  background-color: #bffff0;
+}
+
+.section {
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 2vw;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  font-size: 4vw;
 }
 
 /*==================INFO CARDS CSS==================*/
@@ -123,6 +145,31 @@ a:visited {
 .info-card-img {
   width: 32px;
   height: 32px;
+}
+
+/*==================INDIVIDUAL INFO BACKGROUNDS==================*/
+#happiness-img {
+  background-image: url('../img/cloudwalking.png');
+}
+
+#coffee-img {
+
+}
+
+#fitness-img {
+
+}
+
+#meal-img {
+
+}
+
+#apartment-img {
+
+}
+
+#weather-img {
+
 }
 
 footer{
