--- a/src/main/resources/templates/nav/jobs.html
+++ b/src/main/resources/templates/nav/jobs.html
@@ -6,13 +6,9 @@
 <div class="bar">
 
     <a class="navbar-item" id="logo" href="/jobs">
-        <img src="/img/push-pin-on-map.svg" alt="logo" id="logo" />
+        <img src="/img/placeholder-3.svg" alt="logo" id="logo" />
     </a>
     <input class="navbar-item" id="city-input" placeholder="Company Address" type="text"/>
-    <div class="navbar-item" id="persons-selector">
-        <span class="tooltip">How many ppl are moving?</span>
-        <img class="navbar-item" id="persons-image" src="./img/009-user-black-close-up-shape.svg" alt="one" />
-    </div>
     <button class="navbar-item go" id="get-info">GO</button>
 </div>
 
