fixed capital letters in script tag

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -58,7 +58,7 @@
         const MAPS_KEY = "@environment.getProperty('google.maps.key')";
         /*]]>*/
     </script>
-    <script src="/js/ajax.js"></script>
+    <script src="/JS/ajax.js"></script>
 </scripts>
 
 </body>
