Rough draft of mobile responsive templete for all the pages.

--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -1,3 +1,6 @@
+html {
+    font-size: 14px;
+}
 
 html, body {
   height: 100%;
@@ -91,7 +94,7 @@ a:visited {
 }
 
 .colored-tile {
-  height: 50vh;
+  height: 25vh;
   width: 100vw;
 }
 
