--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -6,7 +6,7 @@
 <div class="bar">
 
   <a class="navbar-item" id="logo" href="/">
-    <img src="http://via.placeholder.com/32x32"/>
+    <img src="/img/placeholder-3.svg" alt="logo" id="logo" />
   </a>
   <input class="navbar-item" id="city-input" placeholder="Company Address" type="text"/>
   <button class="navbar-item" id="get-info">GO</button>
