--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -47,18 +47,20 @@
 
 <!--SCRIPTS FRAGMENT-->
 <scripts th:fragment="scripts">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous">
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script th:src="${'https://maps.googleapis.com/maps/api/js?key=' + @environment.getProperty('google.maps.key') + '&amp;libraries=places'}"></script>
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        const MAPS_KEY = "@environment.getProperty('google.maps.key')";
-        /*]]>*/
-    </script>
-    <script src="/JS/ajax.js"></script>
+  <input id="openWeatherMapKey" type="hidden" th:value="${@environment.getProperty('openweathermaps.key')}"/>
+  <input id="indeedKey" type="hidden" th:value="${@environment.getProperty('indeed.key')}"/>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+          crossorigin="anonymous">
+  </script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script th:src="${'https://maps.googleapis.com/maps/api/js?key=' + @environment.getProperty('google.maps.key') + '&amp;libraries=places'}"></script>
+  <script th:inline="javascript">
+      /*<![CDATA[*/
+      const MAPS_KEY = "@environment.getProperty('google.maps.key')";
+      /*]]>*/
+  </script>
+  <script src="/JS/ajax.js"></script>
 </scripts>
 
 </body>
